# recsys

./: .gitignore  README.md  data_generator.py  dataloader.py  matgraph.cpp  matgraph.h  matgraph.py  matgraph_py.cpp  matgraph_py.pyx  ml_32m_dp.cpp  ml_32m_dp.h  ml_32m_dp_py.cpp  ml_32m_dp_py.pyx  model.py  mysoftmax.cu  mytest.py  ops.py  py-encoder-decoder.ipynb  py-transformer-recsys.ipynb  py-transformers.ipynb  pyrecsys.py  pyrecsys2.py  pytorch_c_ext.cpp  requirements.txt  setup.py  setup_cuda_gcp.py  setup_cuda_rtx.py  setup_macos.py  setup_matgraph.py  setup_ml_32m.py  setup_ml_32m_gcp.py  sparse_mat.py  test_loader.py  testcpp.py  trainer.py
extension_cpp.egg-info/: PKG-INFO  SOURCES.txt
movielens/: custom_datasets.py  custom_pytorch_ratings_only.py  lightning_pytorch_ratings_only.py  prepare_training_data.py
pytorch-cpp-example/: CMakeLists.txt
